<resources>
    <string name="app_name">HumanResourceManagement</string>
    <string name="title_employee_information">Thông Tin Nhân Viên</string>
    <string name="title_employee_name">Name :</string>
    <string name="title_employee_address">Addess :</string>
    <string name="title_description_department">Description :</string>
    <string name="title_employee_birthday">Birthday :</string>
    <string name="title_employee_phone">Phone :</string>
    <string name="title_employee_status">Status :</string>
    <string name="title_employee_position">Position :</string>
    <string name="action_edit_employee">EDIT</string>
    <string name="title_project">Human Resource Management Application</string>
    <string name="title_employee_listview">Danh Sách Nhân Viên</string>
    <string name="hint_search_employee">Nhap ten tim kiem ...</string>
    <string name="action_search_employee">SEARCH</string>
    <string name="title_employee_item_name">Staff Name</string>
    <string name="title_employee_item_status">Staff Status</string>
    <string name="title_department_name">Department Name</string>
    <string name="title_edit_employee_info">Edit Information Employee</string>
    <string name="title_add_employee_info">Add Information Employee</string>
    <string name="title_edit_depart_info">Edit Information Department</string>
    <string name="title_add_department">Add Information Department</string>
    <string name="action_update_edit_employee">Update</string>
    <string name="action_cancle_edit_employee">Cancel</string>
    <string name="edit_done">Edit done !</string>
    <string name="edit_fail">Edit fail !</string>
    <string name="add_done">Add done !</string>
    <string name="add_fail">Add fail !</string>
    <string name="name">Name : </string>
    <string name="address">Address : </string>
    <string name="birthday">Birthday : </string>
    <string name="phone">Phone : </string>
    <string name="status">Status : </string>
    <string name="position">Position : </string>
    <string name="cursor_em_null">Cursor Employee null !</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search_null">Khong co nhan vien can tim !</string>
    <string name="search_depart_null">Khong co phong ban can tim !</string>
    <string name="view_list_department">View</string>
    <string name="edit_depart_info">Edit</string>
    <string name="choose_birthday">Choose Birthday</string>

</resources>
