<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/title_add_employee_info"
        android:textSize="@dimen/text_size_title_30"
        android:textColor="@android:color/holo_red_light"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/activity_margin_top_10"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_height="@dimen/activity_layout_height_50">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_title"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:text="@string/title_employee_name" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/name_add_depart"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_margin_top_10"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_height="@dimen/activity_layout_height_200">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_title"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:text="@string/title_description_department" />

        <EditText
            android:id="@+id/description_depart"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/activity_margin_top"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="@dimen/activity_layout_height_50">

        <Button
            android:id="@+id/button_add_depart2"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_button_update_edit_employee_info"
            android:textColor="@android:color/holo_red_light"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/button_cancle_add_depart"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_size_button_update_edit_employee_info"
            android:text="@string/cancel"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>